--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1691.0",
+    "browser-image-compression": "^2.0.2",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.453.0",
     "next": "15.0.0",
